<resources>
    <string name="app_name">Lets Read</string>
    <string name="book_name">Book Title</string>
    <string name="author">Author</string>
    <string name="Genre">Genre</string>
    <string name="year_released">Year Released</string>
    <string name="summary">Summary of the book</string>
    <string name="post_button">Post</string>

    <string name="action_post">Posts</string>
    <string name="action_read">Create Post</string>

    <string name="menu_read">Create Post</string>
    <string name="menu_post">Posts</string>
    <string name="menu_favourites">Your Favourites</string>
    <string name="menu_share">Share</string>
    <string name="menu_about">About Me</string>

    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Lets Read</string>
    <string name="nav_header_subtitle">GMail</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="aboutme_title">Karol Uju</string>
    <string name="aboutus_message">Hi, I\'m Karol\n\nThis is my Lets Read Application \n\n Thank you for using it! \n\n I appreciate it.</string>

    <string name="messageLoading">Please Wait while the Application connect to the Server...</string>

    <string name="action_edit">Edit Post</string>
    <string name="action_update">Update Post</string>
    <string name="message_edit">Please Update your Details Below</string>

    <string name="label_emailpassword">Email/Password Authentication</string>
    <string name="desc_emailpassword">Use an email and password to authenticate with Firebase.</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="send_link">Send Link</string>
    <string name="sign_out">Sign Out</string>
    <string name="verify_email">Verify Email</string>
    <string name="disconnect">Disconnect</string>
    <string name="loading">Loading…</string>
    <string name="signed_in">Signed In</string>
    <string name="signed_out">Signed Out</string>
    <string name="token_null">Token: null</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="firebase_user_management">Firebase User Management</string>
    <string name="emailpassword_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="emailpassword_title_text">Please Login Below</string>

    <string name="menu_post_all">Other Readers</string>

    <string name="select_profile_image">Select Profile Image</string>

    <string name="sign_in_google">Sign In with Google</string>
    <string name="sign_in_email">Sign In with Email</string>
    <string name="sign_in_phone">Sign In with Phone</string>


</resources>
