<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_100"
    android:orientation="vertical"
    android:weightSum="4">


    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="541dp"
        android:layout_weight="1"
        app:srcCompat="@mipmap/ic_launcher_read" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@color/colorWhite1"
        android:gravity="center_vertical">

        <LinearLayout
            android:id="@+id/emailButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="16dp"
            android:paddingRight="16dp">

            <Button
                android:id="@+id/emailSignInButton"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:background="@drawable/fui_idp_button_background_email"
                android:drawableStart="@android:drawable/sym_action_email"
                android:gravity="center_vertical"
                android:paddingLeft="30dip"
                android:paddingRight="35dip"
                android:singleLine="true"
                android:text="@string/sign_in_email"
                android:textAlignment="center"
                android:textAllCaps="false" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/googleButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/phoneButton"
            android:layout_marginTop="1dp"
            android:orientation="horizontal"
            android:paddingLeft="16dp"
            android:paddingRight="16dp">

            <Button
                android:id="@+id/googleSignInButton"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:background="@color/colorAccent"
                android:drawableStart="@drawable/fui_ic_googleg_color_24dp"
                android:gravity="center_vertical"
                android:paddingLeft="30dip"
                android:paddingRight="26dip"
                android:singleLine="true"
                android:text="@string/sign_in_google"
                android:textAlignment="center"
                android:textAllCaps="false" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/phoneButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/emailButton"
            android:layout_marginTop="2dp"
            android:orientation="horizontal"
            android:paddingLeft="16dp"
            android:paddingRight="16dp">

            <Button
                android:id="@+id/phoneSignInButton"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:background="@drawable/fui_idp_button_background_phone"
                android:drawableStart="@drawable/fui_ic_phone_white_24dp"
                android:gravity="center_vertical"
                android:paddingLeft="30dip"
                android:paddingRight="26dip"
                android:singleLine="true"
                android:text="@string/sign_in_phone"
                android:textAlignment="center"
                android:textAllCaps="false" />

        </LinearLayout>

    </RelativeLayout>

</LinearLayout>